--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: auto_orientation
-description: Set the device orientation programmatically
-version: 0.0.1
+description: Set the device orientation programmatically for iOS and Android
+version: 1.0.0
 author: Sebastian Faujour <sf@bytepark.de>
-homepage: https://www.bytepark.de
+homepage: https://github.com/bytepark/auto_orientation
 
 environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
