Update dependency version pinning - Update CHANGELOG

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: auto_orientation
 description: Set the device orientation programmatically for iOS and Android
-version: 1.0.2
+version: 1.0.3
 author: Sebastian Faujour <sf@bytepark.de>
 homepage: https://github.com/bytepark/auto_orientation
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.0.0 <3.0.0"
 
 dependencies:
   flutter:
