--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,15 @@
 name: auto_orientation
 description: Set the device orientation programmatically for iOS and Android
-version: 1.0.4
+version: 1.0.5
 author: Sebastian Faujour <sf@bytepark.de>
 homepage: https://github.com/bytepark/auto_orientation
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
-  flutter: ">=1.0.0 <2.0.0"
+  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+
+dependencies:
+  flutter:
+    sdk: flutter
 
 flutter:
   plugin:
