--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,6 +1,9 @@
 name: auto_orientation_example
 description: An example of how to use the auto orientation plugin for Flutter
 
+environment:
+  sdk: '>=2.12.0 <3.0.0'
+
 dependencies:
   auto_orientation:
     path: ../
@@ -16,13 +19,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
