--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: auto_orientation
 description: Set the device orientation programmatically for iOS and Android
-version: 1.0.6
-author: Sebastian Faujour <sf@bytepark.de>
+version: 1.0.7
+author: bytepark GmbH <code@bytepark.de>
 homepage: https://github.com/bytepark/auto_orientation
 
 environment:
