remove Android v1 embedding, upgrade and cleanup example app

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 .DS_Store
 .dart_tool/
+.idea/
 
 .packages
 .pub/
 pubspec.lock
+example/.flutter-plugins-dependencies
+example/ios/Flutter/flutter_export_environment.sh
 
 build/
