--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,43 @@
 .DS_Store
-.dart_tool/
+.atom/
 .idea/
+.vscode/
 
 .packages
 .pub/
+.dart_tool/
 pubspec.lock
-example/.flutter-plugins-dependencies
-example/ios/Flutter/flutter_export_environment.sh
+!example/pubspec.lock
+flutter_export_environment.sh
 
+examples/all_plugins/pubspec.yaml
+
+Pods/
+.symlinks/
+**/Flutter/.last_build_id
+**/Flutter/App.framework/
+**/Flutter/Flutter.framework/
+**/Flutter/Generated.xcconfig
+**/Flutter/flutter_assets/
+ServiceDefinitions.json
+xcuserdata/
+**/DerivedData/
+
+local.properties
+keystore.properties
+.gradle/
+gradlew
+gradlew.bat
+gradle-wrapper.jar
+.flutter-plugins-dependencies
+*.iml
+
+GeneratedPluginRegistrant.h
+GeneratedPluginRegistrant.m
+GeneratedPluginRegistrant.java
 build/
+.flutter-plugins
+
+.project
+.classpath
+.settings
