--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,6 +2,8 @@ name: auto_orientation
 description: Set the device orientation programmatically for iOS and Android
 version: 2.3.0
 homepage: https://github.com/bytepark/auto_orientation
+repository: https://github.com/bytepark/auto_orientation
+issue_tracker: https://github.com/bytepark/auto_orientation/issues
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
